--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typed.js": "^2.1.0"
   },
   "devDependencies": {
+    "@types/node": "^20.12.6",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
